test/with18.slq

def main(){
	x:=H(0);
	with{
		def g(i:!ℕ){
			if i=0{ return; }
			if x{ phase(π); } /// error
			return g(i sub 1);
		}
	}do{
		g(3);
		y:=measure(x);
		x:=(y,y);
	}
	return x;
}
